# langchain-playground

./: .flake8  .gitignore  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  index.py  pyproject.toml  serve.py  serve_dev.py  ui.py
config/: sample.yaml
docs/: house.wikipedia  house2.wikipedia  row.wikipedia
docs.bak/: rowing.wikipedia
src/: configuration.py  settings.py
src/indexer/: __init__.py
src/server/: __init__.py  app.py  models.py
src/splitter/: __init__.py
src/store/: __init__.py  es.py
